<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--TopMenu-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/bg_home"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:id="@+id/ll_home_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="75dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.juguo.gushici.view.XCRoundImageView
                        android:id="@+id/img_user"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginBottom="5dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_user_place" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="我的"
                        android:textColor="@color/color_332216"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_home_learn_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_learn_report"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_marginBottom="5dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_learn_report" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/learn_report"
                        android:textColor="@color/color_332216"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_home_learn_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_learn_plan"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_marginBottom="5dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_learn_plan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/learn_plan"
                        android:textColor="@color/color_332216"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_home_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_search"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_marginBottom="5dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_home_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:textColor="@color/color_332216"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!--爱学Class1-Class6-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-1dp">

                <ImageView
                    android:id="@+id/iv_home_class1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/bg_home_class_1" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="45dp"
                    android:background="@mipmap/ic_class_type_right_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rb_class1_kenei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:button="@null"
                        android:text="课内"
                        android:textColor="@color/color_C52509"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb_class1_kewai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="课外"
                        android:textColor="@color/text_14"
                        android:textSize="15sp" />
                </RadioGroup>
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_home_class2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/bg_home_class_2" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="217dp"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/ic_class_type_right_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rb_class2_kenei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:button="@null"
                        android:text="课内"
                        android:textColor="@color/color_C52509"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb_class2_kewai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="课外"
                        android:textColor="@color/text_14"
                        android:textSize="15sp" />
                </RadioGroup>
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_home_class3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/bg_home_class_3" />

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/ic_class_type_left_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rb_class3_kenei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:button="@null"
                        android:text="课内"
                        android:textColor="@color/color_C52509"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb_class3_kewai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="课外"
                        android:textColor="@color/text_14"
                        android:textSize="15sp" />
                </RadioGroup>
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_home_class4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/bg_home_class_4" />

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="230dp"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/ic_class_type_right_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rb_class4_kenei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:button="@null"
                        android:text="课内"
                        android:textColor="@color/color_C52509"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb_class4_kewai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="课外"
                        android:textColor="@color/text_14"
                        android:textSize="15sp" />
                </RadioGroup>
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_home_class5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/bg_home_class_5" />

                <RadioGroup
                    android:id="@+id/radioGroup5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="60dp"
                    android:background="@mipmap/ic_class_type_left_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rb_class5_kenei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:button="@null"
                        android:text="课内"
                        android:textColor="@color/color_C52509"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb_class5_kewai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="课外"
                        android:textColor="@color/text_14"
                        android:textSize="15sp" />
                </RadioGroup>
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_home_class6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/bg_home_class_6" />

                <RadioGroup
                    android:id="@+id/radioGroup6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="215dp"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/ic_class_type_right_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rb_class6_kenei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:button="@null"
                        android:text="课内"
                        android:textColor="@color/color_C52509"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rb_class6_kewai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="课外"
                        android:textColor="@color/text_14"
                        android:textSize="15sp" />
                </RadioGroup>
            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>